# django_webassembly

./: .eslintignore  .eslintrc.js  .gitignore  CNAME  Makefile  README.md  app.js  index.html  init.py  manage.py  package.json  pyproject.toml  worker.js
django_webassembly/: apps.py  asgi.py  settings.py  urls.py  views.py  wsgi.py
django_webassembly/django_webassembly/: apps.py
django_webassembly/polls/: admin.py  apps.py  urls.py  views.py
django_webassembly/polls/migrations/: 0001_initial.py
django_webassembly/polls/templates/polls/: detail.html  index.html  results.html
django_webassembly/templates/django_webassembly/: index.html
polls/: urls.py
wheel/: django_webassembly-0.1.0-py3-none-any.whl
