[tool.poetry]
name = "django_webassembly"
version = "0.1.0"
description = ""
authors = ["Matt Butterfield <matt@mattbutterfield.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.1"

[tool.poetry.dev-dependencies]
black = "^22.8.0"
ipdb = "^0.13.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
